[package]
name = "keep-Alive-Example"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", features = ["json"] }
tokio = { version = "1", features = ["full"] }
solana-client = "2.2.2"
solana-sdk = "2.2.2"
rand = "0.8.5"
bincode = "1.3.3"
base64 = "0.22.1"
serde_json = "1.0.140"